--- a/src/app/client/seller/order-data/order-data.component.scss
+++ b/src/app/client/seller/order-data/order-data.component.scss
@@ -256,3 +256,25 @@
     color: black;
   }
 }
+
+.item-parameters {
+  display: flex;
+  margin-top: 5px;
+}
+
+.param-block {
+  margin-right: 10px;
+  font-size: 13px;
+}
+
+.param-name {
+  font-size: inherit;
+  color: #867d7d;
+  font-weight: 900;
+}
+
+.param-value {
+  font-size: inherit;
+  color: #bfb6b6;
+  font-weight: 900;
+}
