--- a/src/app/client/user/cart/cart.component.html
+++ b/src/app/client/user/cart/cart.component.html
@@ -35,7 +35,13 @@
             <div style="font-size: 10px">id: {{item.advertisementId}}</div>
           </div>
           <div class="goods-price">
-            <span>$ {{item.price.toFixed(2)}}</span>
+            <span>$ {{item.priceCountResponse.price.toFixed(2)}}</span>
+          </div>
+<!--          <div class="goods-params" *ngIf="item.priceCountResponse.values.size > 0">-->
+          <div class="goods-params">
+              <div *ngFor="let paramValue of item.priceCountResponse.values | keyvalue" class="param-block">
+                <span class="param-name">{{paramValue.key}}</span>: <span class="param-value">{{paramValue.value}}</span>
+              </div>
           </div>
           <div class="goods-delivery">
             <span class="delivery-text"><span class="delivery-label">Доставка: </span>{{item.deliveryType.title}}</span>
@@ -58,8 +64,7 @@
             <button [disabled]="item.count <= 1" class="count-button" (click)="clickMinusCountButton(item)">-</button>
             <input type="number" class="item-count-input" min="1" [value]="item.count"
                    (keyup)="inputCartItemCount($event, item)">
-            <button [disabled]="item.count === item.max" (click)="clickPlusCountButton(item)" class="count-button">+
-            </button>
+            <button [disabled]="item.count >= item.priceCountResponse.count" (click)="clickPlusCountButton(item)" class="count-button">+</button>
           </div>
         </div>
       </div>
