--- a/src/app/client/user/order-making/order-making.component.scss
+++ b/src/app/client/user/order-making/order-making.component.scss
@@ -136,13 +136,12 @@
     font-weight: 800;
     word-break: break-all;
   }
-
-  margin-bottom: 20px;
 }
 
 .goods-delivery {
   font-size: 12px;
   cursor: pointer;
+  margin-top: 10px;
 }
 
 .delivery-text {
@@ -264,6 +263,28 @@
 
 .add-description + .description-input{
   display: block;
+}
+
+
+
+.goods-params{
+  display: flex;
+  margin-top: 10px;
+}
+
+.param-block{
+  font-size: 14px;
+  margin-right: 10px;
+}
+
+.param-name{
+  font-size: inherit;
+  font-weight: 800;
+}
+
+.param-value{
+  font-size: inherit;
+  color: #857e7e;
 }
 
 
