--- a/src/app/client/dialogs/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/client/dialogs/confirm-dialog/confirm-dialog.component.html
@@ -3,7 +3,7 @@
 </div>
 <div><span class="dialog-text">{{data.text}}</span></div>
 <div class="button-holder">
-  <button class="dialog-button" (click)="close(true)">Видалити</button>
+  <button class="dialog-button" (click)="close(true)">Так</button>
   <button class="dialog-button cancel-button" (click)="close(false)">Скасувати</button>
 </div>
 
