--- a/src/app/client/common/advertisement/advertisement-for-search-table-view/advertisement-for-search-table-view.component.scss
+++ b/src/app/client/common/advertisement/advertisement-for-search-table-view/advertisement-for-search-table-view.component.scss
@@ -1,30 +1,44 @@
+* {
+  color: #F6F7F9;
+}
+
 .advertisement-container {
   width: 100%;
   //margin: 5px;
   height: 100%;
 
-  border-radius: 5px;
+  border-radius: 3px;
 
   //border: 1px solid black;
 
-  background-color: #ffffff;
+  //background-color: #ffffff;
+  //background-color: #000000;
+  background-color: #001441ab;
+  //background-color: #039893;
 
   transition: all .1s;
 
   &:hover {
-    box-shadow: 0 0 4px 1px #ded8d8;
+    //box-shadow: 0 0 4px 1px #ded8d8;
   }
 }
 
 .image-container {
   height: 65%;
   width: 100%;
+  padding: 4px;
+
+  //display: flex;
+  //justify-content: center;
+  //align-items: center;
 }
 
 .main-image {
-  border-radius: 5px 5px 0 0;
+  //border-radius: 5px 5px 0 0;
   height: 100%;
+  //height: 95%;
   width: 100%;
+  //width: 95%;
 
   object-fit: cover;
 }
@@ -68,7 +82,7 @@
   justify-content: space-between;
   font-size: 13px;
   //margin-top: 10px;
-  color: #5b5858;
+  //color: #5b5858;
   //flex-grow: 2;
   height: 20px;
 }
@@ -97,7 +111,7 @@
   //margin-top: 20px;
 
   a {
-    color: #857e7e;
+    //color: #857e7e;
     font-weight: 300;
     font-size: inherit;
   }
