--- a/src/app/client/search/search.component.scss
+++ b/src/app/client/search/search.component.scss
@@ -153,6 +153,7 @@ g.selected {
   //width: 80%;
   margin: 0 auto;
   display: flex;
+  background-color: #fff;
   //justify-content: space-between;
   flex-wrap: wrap;
 }
@@ -281,10 +282,10 @@ g.selected {
 
 app-advertisement-for-search-table-view {
   width: 19%;
-  height: 300px;
+  height: 250px;
   //margin: 3px;
 
-  margin: 10px 6px;
+  margin: 5px 6px;
 }
 
 .row-advertisement-holder{
