--- a/src/app/client/seller/seller-settings/seller-panel-settings/seller-panel-settings.component.html
+++ b/src/app/client/seller/seller-settings/seller-panel-settings/seller-panel-settings.component.html
@@ -1,1 +1,4 @@
-<p>seller-panel-settings works!</p>
+<app-goods-shop-markup
+  *ngIf="markup !== null"
+  [markupViewType]="'update'"
+  [markup]="markup"></app-goods-shop-markup>
